[package]
name = "fp"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.11"
crypto-hash = "0.3.4"
secp256k1 = "0.30.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_with = { version = "3.12.0", features = ["hex"] }
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["full"] }
axum = "0.8.1"
reqwest = { version = "0.12.12", features = ["json"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
hex = "0.4.3"
futures = "0.3.31"
